fix navbar z-index

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 .navbarBg {
@@ -83,7 +84,6 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    /*z-index: 10;*/
 }
 
 @media screen and (width <= 990px) {
