--- a/src/styles/Stand.module.css
+++ b/src/styles/Stand.module.css
@@ -6,8 +6,9 @@
     display: grid;
     grid-template-columns: auto 30%;
     gap: 16px;
-    z-index: -2;
     scroll-margin-top: 152px;
+    z-index: -1;
+    pointer-events: none;
 }
 
 .content {
