--- a/src/styles/TourNavigation.module.css
+++ b/src/styles/TourNavigation.module.css
@@ -3,13 +3,16 @@
     border-radius: 32px;
     padding: 8px;
     border: 1px solid #b1c7f6;
-    display: flex;
-    justify-content: space-between;
-    gap: 8px;
     margin-bottom: 16px;
     position: sticky;
     top: 92px;
     box-shadow: 0 4px 8px rgba(0, 0, 189, 0.1);
+}
+
+.navLinks {
+    display: flex;
+    justify-content: space-between;
+    gap: 8px;
 }
 
 .navLink {
@@ -24,4 +27,24 @@
 .navLink:hover {
     background: #dde5f6;
     border: 1px solid #b1c7f6;
+}
+
+.foldMenu {
+    display: none;
+}
+
+@media screen and (width <= 920px) {
+    .navLinks {
+        display: none;
+    }
+
+    .foldMenu {
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
+    }
+
+    .navigation:hover {
+        background: #dde5f6;
+    }
 }
